Update 1: Adjust endpoints
